fix(dialog): set to auto so scrollbar is hidden unless needed

--- a/components/Dialog.module.css
+++ b/components/Dialog.module.css
@@ -40,7 +40,7 @@
     gap: 2rem;
     animation: 0.2s ease-in-out 0s 1 animateDialog;
     outline: 1px solid rgb(85, 85, 85);
-    overflow-y: scroll;
+    overflow-y: auto;
 
     @media (max-width: 980px) {
         width: 90%;
